# liberamox

./: .gitignore  .travis.yml  BoardConfiguration_8h.html  BoardConfiguration_8h_source.html  ErrorMgmt_8h.html  ErrorMgmt_8h_source.html  HardwareAdapter_8h_source.html  Hardware_8h_source.html  Interrupt_8h.html  Interrupt_8h_source.html  Pin_8h.html  Pin_8h_source.html  README.md  RandomGenerator_8h.html  RandomGenerator_8h_source.html  Utility_8h.html  Utility_8h_source.html  annotated.html  classes.html  classliberamox_1_1BoardConfiguration-members.html  classliberamox_1_1BoardConfiguration.html  classliberamox_1_1ErrorCallback.html  classliberamox_1_1ErrorMgmt-members.html  classliberamox_1_1ErrorMgmt.html  classliberamox_1_1Hardware-members.html  classliberamox_1_1Hardware.html  classliberamox_1_1HardwareAdapter-members.html  classliberamox_1_1HardwareAdapter.html  classliberamox_1_1Interrupt-members.html  classliberamox_1_1Interrupt.html  classliberamox_1_1Pin-members.html  classliberamox_1_1Pin.html  classliberamox_1_1RandomGenerator-members.html  classliberamox_1_1RandomGenerator.html  classliberamox_1_1Validity-members.html  classliberamox_1_1Validity.html  dir_dadfad0cdb7b6d04f81498705e1ea21f.html  files.html  functions.html  functions_enum.html  (+18 more)
doxygen/html/: BoardConfiguration_8h.html  BoardConfiguration_8h_source.html  ErrorMgmt_8h.html  ErrorMgmt_8h_source.html  HardwareAdapter_8h_source.html  Hardware_8h_source.html  Interrupt_8h.html  Interrupt_8h_source.html  Pin_8h.html  Pin_8h_source.html  RandomGenerator_8h_source.html  Utility_8h_source.html  annotated.html  classes.html  classliberamox_1_1BoardConfiguration-members.html  classliberamox_1_1BoardConfiguration.html  classliberamox_1_1ErrorCallback.html  classliberamox_1_1ErrorMgmt-members.html  classliberamox_1_1ErrorMgmt.html  classliberamox_1_1Hardware-members.html  classliberamox_1_1Hardware.html  (+30 more)
html/: BoardConfiguration_8h_source.html  ErrorMgmt_8h_source.html  annotated.html  classes.html  classliberamox_1_1BoardConfiguration-members.html  classliberamox_1_1BoardConfiguration.html  classliberamox_1_1ErrorCallback.html  classliberamox_1_1ErrorMgmt.html  classliberamox_1_1Hardware-members.html  classliberamox_1_1Hardware.html  classliberamox_1_1HardwareAdapter-members.html  classliberamox_1_1Pin-members.html  classliberamox_1_1RandomGenerator-members.html  classliberamox_1_1RandomGenerator.html  dir_dadfad0cdb7b6d04f81498705e1ea21f.html  index.html
latex/: annotated.tex  classliberamox_1_1BoardConfiguration.tex  classliberamox_1_1ErrorCallback.tex  classliberamox_1_1ErrorMgmt.tex  classliberamox_1_1Hardware.tex  classliberamox_1_1HardwareAdapter.tex  classliberamox_1_1Interrupt.tex  classliberamox_1_1Pin.tex  classliberamox_1_1RandomGenerator.tex  classliberamox_1_1Validity.tex  dir_dadfad0cdb7b6d04f81498705e1ea21f.tex  refman.tex
liberamox/: .gitignore  .travis.yml  BoardConfiguration.h  CMakeLists.txt  Doxygen  Doxygen.config  ErrorMgmt.h  Hardware.cpp  Hardware.h  HardwareAdapter.cpp  HardwareAdapter.h  Interrupt.h  Pin.cpp  Pin.h  README  README.md  RandomGenerator.h  Utility.h
liberamox/lib/: ArduinoConfig.cmake  BoardConfiguration.h  CMakeLists.txt  ErrorMgmt.h  Hardware.cpp  Hardware.h  HardwareAdapter.cpp  HardwareAdapter.h  Interrupt.h  Pin.cpp  Pin.h  RandomGenerator.h  Utility.h
liberamox/src/: BoardConfiguration.h  CMakeLists.txt  ErrorMgmt.h  Interrupt.h  liberamoxconfig.h.in  main.cpp
liberamox/testing/: CMakeLists.txt  CTestConfig.cmake  main.cpp
search/: all_1.js  all_4.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_e.js  all_f.js  classes_6.js  defines_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_4.js  functions_0.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  searchdata.js  typedefs_0.js
test/: .cproject  .ino.cpp  .project  test.ino
(+51 files in other folders)
